# fluid-simulation

./: COMPARISON_STRATEGY.md  README.md  TODO.md
framework/: CMakeLists.txt  PRESENTATION.md  README.md  TODO.md  build_debug.sh  build_release.sh  create_all_videos.sh  create_side_by_side_video.sh  create_video.sh  latex_to_js.js  output.cpp  reconstruct.sh  run_debug.sh  run_release.sh  run_tests_debug.sh  run_tests_release.sh
framework/app/: main.cpp
framework/learnSPH/: CMakeLists.txt  common.h  data.h  kernel.cpp  kernel.h  neighborhood.h  particle.cpp  particle.h  physics.h  scenario.h
framework/reconstruction/: CMakeLists.txt  main.cpp  voxelgrid.h
framework/scenarios/: boundary_wetting_box.txt  boundary_wetting_monkey.txt  boundary_wetting_sphere.txt  box_with_hole.txt  box_with_hole_on_sphere.blend  box_with_hole_on_sphere.blend1  box_with_hole_with_only_adhesion.txt  box_with_hole_with_surface_tension.txt  dam_break_simple_10iter.txt  dam_break_simple_10iter_01visf.txt  dam_break_simple_10iter_05visf.txt  dam_break_simple_15iter.txt  dam_break_simple_15iter_01visf.txt  dam_break_simple_15iter_05visf.txt  dam_break_simple_2500stiff.txt  dam_break_simple_30iter.txt  dam_break_simple_30iter_01visf.txt  dam_break_simple_30iter_05visf.txt  dam_break_simple_5000stiff.txt  dam_break_simple_7500stiff.txt  dam_break_with_obstacle_box.txt  martin.txt  rotated_plane.txt  rotated_plane_001visb.txt  rotated_plane_01visb.txt  (+13 more)
framework/tests/: CMakeLists.txt  kernel_tests.cpp  particle_tests.cpp  physics_tests.cpp
presentations/: create_side_by_side_video.sh
(+3 files in other folders)
